--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 /* Fundo xadrez */
 body {
   margin: 0;
+  min-height: 100vh;
   font-family: 'Segoe UI', sans-serif;
-  background: repeating-linear-gradient(
-    45deg,
+
+  background-image: repeating-linear-gradient(
+    -45deg,
     #d65a5a,
-    #d65a5a 25px,
-    #ffffff 25px,
-    #ffffff 50px
+    #d65a5a 40px,
+    #ffffff 40px,
+    #ffffff 80px
   );
+
+  background-size: 80px 80px;
+
   display: flex;
   justify-content: center;
 }
