--- a/style.css
+++ b/style.css
@@ -4,15 +4,13 @@ body {
   min-height: 100vh;
   font-family: 'Segoe UI', sans-serif;
 
-  background-image: repeating-linear-gradient(
+  background: repeating-linear-gradient(
     -45deg,
-    #d65a5a,
-    #d65a5a 40px,
-    #ffffff 40px,
-    #ffffff 80px
+    #d65a5a 0px,
+    #d65a5a 30px,
+    #ffffff 30px,
+    #ffffff 60px
   );
-
-  background-size: 80px 80px;
 
   display: flex;
   justify-content: center;
