--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   min-height: 100vh;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Dancing Script', sans-serif;
 
   background: repeating-linear-gradient(
     -45deg,
